[gd_scene load_steps=42 format=3 uid="uid://ttgr2idxlck2"]

[ext_resource type="Script" path="res://scripts/entities/enemy.gd" id="1_su3ef"]
[ext_resource type="PackedScene" uid="uid://cilgi430hlwre" path="res://entities/explosion.tscn" id="2_6goks"]
[ext_resource type="Texture2D" uid="uid://dl4pcqsl2x8q1" path="res://assets/enemies/tnt_sheep_side.png" id="3_5uf8f"]
[ext_resource type="Texture2D" uid="uid://bb6nbknrdgrl3" path="res://assets/enemies/tnt_sheep_up.png" id="4_5tiu7"]
[ext_resource type="Texture2D" uid="uid://vocepfnbhkxr" path="res://assets/enemies/tnt_sheep_down.png" id="5_p5mkq"]
[ext_resource type="Texture2D" uid="uid://3651lhd17hak" path="res://assets/enemies/dead_tnt_sheep.png" id="6_hcso8"]
[ext_resource type="Script" path="res://scripts/components/health.gd" id="6_jod6d"]
[ext_resource type="AudioStream" uid="uid://bvqcebfry6t0c" path="res://assets/audio/sheep.mp3" id="7_6yswy"]
[ext_resource type="AudioStream" uid="uid://b5fdl0wdqktpu" path="res://assets/audio/hit.mp3" id="7_dfhn2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2s3n4"]
radius = 9.0

[sub_resource type="Animation" id="Animation_5wxjw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite/flash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"face_down"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("sprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qhq3b"]
resource_name = "dead"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite/flash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1268),
"transitions": PackedFloat32Array(1, 1.27456),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.105882, 0, 0.101961, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1258),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.133333, 1.96667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"set_dead_dead"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.5, 1.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_so8b8"]
resource_name = "explode"
length = 0.25
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/flash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 0.574349),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rxfgc"]
resource_name = "hurt"
length = 0.133337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/flash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 0.574349),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dqoso"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fh8e5"]
resource_name = "nothing"

[sub_resource type="Animation" id="Animation_wn66t"]
resource_name = "walk_down"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"face_down"
}]
}

[sub_resource type="Animation" id="Animation_l15dk"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"face_left"
}]
}

[sub_resource type="Animation" id="Animation_4xqd4"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"face_right"
}]
}

[sub_resource type="Animation" id="Animation_igi11"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"face_up"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dram2"]
_data = {
"RESET": SubResource("Animation_5wxjw"),
"death": SubResource("Animation_qhq3b"),
"explode": SubResource("Animation_so8b8"),
"hurt": SubResource("Animation_rxfgc"),
"idle": SubResource("Animation_dqoso"),
"nothing": SubResource("Animation_fh8e5"),
"walk_down": SubResource("Animation_wn66t"),
"walk_left": SubResource("Animation_l15dk"),
"walk_right": SubResource("Animation_4xqd4"),
"walk_up": SubResource("Animation_igi11")
}

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_ijioh"]

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_0fhi4"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vsgli"]
animation = &"nothing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w4ppi"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gcxsn"]
animation = &"explode"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kdfbw"]
animation = &"hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h7jlt"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yjlq5"]
animation = &"nothing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3tm1a"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5om8f"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sbt5i"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3gg5o"]
animation = &"walk_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_k0lur"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3tm1a")
blend_point_0/pos = Vector2(-0.3, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_5om8f")
blend_point_1/pos = Vector2(0.3, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_sbt5i")
blend_point_2/pos = Vector2(0, -1.05)
blend_point_3/node = SubResource("AnimationNodeAnimation_3gg5o")
blend_point_3/pos = Vector2(0, 1.05)
min_space = Vector2(-1, -1.05)
max_space = Vector2(1, 1.05)
snap = Vector2(0.01, 0.01)
blend_mode = 1

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_0ch16"]
mix_mode = 1
break_loop_at_end = true

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_e1qio"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_ebg8k"]
mix_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cmg75"]
animation = &"RESET"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_q1bn8"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_w1yvx"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_7p0nh"]
graph_offset = Vector2(41.112, 118.345)
nodes/Add2/node = SubResource("AnimationNodeAdd2_0fhi4")
nodes/Add2/position = Vector2(1293.33, 373.333)
"nodes/Add2 2/node" = SubResource("AnimationNodeAdd2_ijioh")
"nodes/Add2 2/position" = Vector2(1588.14, 503.035)
nodes/Animation/node = SubResource("AnimationNodeAnimation_yjlq5")
nodes/Animation/position = Vector2(800, 400)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_vsgli")
"nodes/Animation 2/position" = Vector2(980, 620)
"nodes/Animation Death/node" = SubResource("AnimationNodeAnimation_w4ppi")
"nodes/Animation Death/position" = Vector2(520, 840)
"nodes/Animation Explode/node" = SubResource("AnimationNodeAnimation_gcxsn")
"nodes/Animation Explode/position" = Vector2(733.333, 573.333)
"nodes/Animation Hurt/node" = SubResource("AnimationNodeAnimation_kdfbw")
"nodes/Animation Hurt/position" = Vector2(360, 520)
"nodes/Animation Idle/node" = SubResource("AnimationNodeAnimation_h7jlt")
"nodes/Animation Idle/position" = Vector2(340, 140)
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_k0lur")
nodes/BlendSpace2D/position = Vector2(173.333, 306.667)
nodes/Death/node = SubResource("AnimationNodeOneShot_0ch16")
nodes/Death/position = Vector2(1240, 660)
nodes/Explode/node = SubResource("AnimationNodeBlend2_e1qio")
nodes/Explode/position = Vector2(1026.67, 413.333)
nodes/Hurt/node = SubResource("AnimationNodeOneShot_ebg8k")
nodes/Hurt/position = Vector2(973.333, 160)
nodes/RESET/node = SubResource("AnimationNodeAnimation_cmg75")
nodes/RESET/position = Vector2(-60, 300)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_q1bn8")
nodes/TimeScale/position = Vector2(500, 300)
nodes/Walk/node = SubResource("AnimationNodeBlend2_w1yvx")
nodes/Walk/position = Vector2(680, 100)
nodes/output/position = Vector2(1900, 320)
node_connections = [&"Add2", 0, &"Hurt", &"Add2", 1, &"Explode", &"Add2 2", 0, &"Add2", &"Add2 2", 1, &"Death", &"Death", 0, &"Animation 2", &"Death", 1, &"Animation Death", &"Explode", 0, &"Animation", &"Explode", 1, &"Animation Explode", &"Hurt", 0, &"Walk", &"Hurt", 1, &"Animation Hurt", &"TimeScale", 0, &"BlendSpace2D", &"Walk", 0, &"Animation Idle", &"Walk", 1, &"TimeScale", &"output", 0, &"Add2 2"]

[node name="enemy" type="RigidBody2D"]
z_index = 25
y_sort_enabled = true
collision_layer = 8
collision_mask = 15
lock_rotation = true
linear_damp = 3.0
angular_damp = 3.0
script = ExtResource("1_su3ef")
speed = 600.0
explosion = ExtResource("2_6goks")
enemy_type = 2
side_texture = ExtResource("3_5uf8f")
up_texture = ExtResource("4_5tiu7")
down_texture = ExtResource("5_p5mkq")
dead_texture = ExtResource("6_hcso8")
audio_dead = ExtResource("7_6yswy")
audio_hit = ExtResource("7_dfhn2")

[node name="sprite" type="Sprite2D" parent="."]
clip_children = 2
position = Vector2(0, -34)
texture = ExtResource("3_5uf8f")
flip_h = true
hframes = 6

[node name="flash" type="ColorRect" parent="sprite"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.015625
anchor_right = 0.015625
anchor_bottom = 0.21875
offset_left = -19.5
offset_top = -20.0
offset_right = 20.5
offset_bottom = 20.0
metadata/_edit_use_anchors_ = true

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2(2, -11)
shape = SubResource("CircleShape2D_2s3n4")

[node name="health" type="Node" parent="."]
script = ExtResource("6_jod6d")
health = 15.0

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dram2")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_7p0nh")
anim_player = NodePath("../animation_player")
parameters/Add2/add_amount = 1.0
"parameters/Add2 2/add_amount" = 1.0
parameters/BlendSpace2D/blend_position = Vector2(0, 0)
parameters/Death/active = false
parameters/Death/internal_active = false
parameters/Death/request = 0
parameters/Explode/blend_amount = 0.0
parameters/Hurt/active = false
parameters/Hurt/internal_active = false
parameters/Hurt/request = 0
parameters/TimeScale/scale = 1.5
parameters/Walk/blend_amount = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="health_changed" from="health" to="." method="_on_hit"]
